--- a/index.html
+++ b/index.html
@@ -323,7 +323,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #F9C4F2;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #f9c4f2;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #EC4DD7;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
