--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@ Customise the visual style and appearance of your guide.
         padding: 7px 10px 5px 25px;
         list-style-type: square;
         list-style-position: inside;
-        color:#99CEF1;
+        color:#65b5ea;
       }
 
       .content {
