--- a/index.html
+++ b/index.html
@@ -255,6 +255,7 @@ Customise the visual style and appearance of your guide.
       body {
         margin:0 0 130px;
         width:100%;
+        background-color:#65b5ea;
         font-weight:Bold;
         font-family:Arial, sans-serif;         /* CHANGE THE FONT HERE */
         color:#E611C9;         /* CHANGE THE FONT COLOR HERE */
