--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Develop-Basic-Journalism-Skills" title="How to Develop Basic Journalism Skills: 12 Steps - wikiHow">WikiHow</a>.</p>
-      <p>Images are by <a data-flickr-embed="true" href="https://www.flickr.com/photos/191236775@N02/50676000247/in/dateposted/" title="Article writing"><img src="https://live.staticflickr.com/65535/50676000247_2170aa5c99_z.jpg" width="%" height="%" alt="Article writing"></a></p>
+      <p>Images are by <a data-flickr-embed="true" href="https://www.flickr.com/photos/191236775@N02/50676000247/in/dateposted/" title="Article writing"></a></p>
     </footer>
 
     <!--
